# programming_samples

./: README.md
c++_tests/: README.md  cuadratica.cpp  hello.cpp  probandoif.cpp  testing.cpp  video.cpp
opencv_for_rookies/: CMakeLists.txt  README.md
opencv_for_rookies/include/: colordetector.h  histograma.h
opencv_for_rookies/src/: 7up.cpp  backup_photos.cpp  blancos.cpp  canny.cpp  colorDetection.cpp  colordetector.cpp  create_images.cpp  crop.cpp  display_image.cpp  histo1d.cpp  histograma.cpp  kinect.cpp  mat.cpp  negative.cpp  photos.cpp  prueba.cpp  roi.cpp  salt_pepper.cpp
